Bug 692567 - Regression: rendering of Bug687295a.pdf with -dGraphicsAlphaBits=4
Summary: Regression: rendering of Bug687295a.pdf with -dGraphicsAlphaBits=4
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Color (show other bugs)
Version: master
Hardware: PC All
: P4 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-02 19:18 UTC by Marcos H. Woehrmann
Modified: 2011-12-05 20:44 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2011-10-02 19:18:11 UTC
The attached file, Bug687295a.pdf, is rendered differently with and without -dGraphicsAlphaBits=4 by Ghostscript.  Acrobat X 10.1.1 agrees with the rendering of the file without the -dGraphicsAlphaBits=4 option.

The command line I'm using for testing:

  bin/gs -sDEVICE=ppmraw -o test.ppm -dGraphicsAlphaBits=4 ./Bug687295a.pdf

This is a regression, Ghostscript 9.02 renders the file the correctly with -dGraphicsAlphaBits=4; I've bisecting now.
Comment 1 Marcos H. Woehrmann 2011-10-02 19:42:17 UTC
Looks like this broke in:

commit 8170bf69742a320e7e28bffa58cbf0f0f14f2eb0
Author: Michael Vrhel <michael.vrhel@artifex.com>
Date:   Thu Apr 7 03:30:16 2011 +0000

    Fix for 692123.  It was necessary to make sure that the blending state of the pdf14 device is updated when we have the alpha buffer
    
    git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@12373 a1074d23-0009-0410-80fe-cf8c14f379e6
Comment 3 Michael Vrhel 2011-12-05 18:50:50 UTC
Looks like yet another hiccup in pdf14_copy_alpha.
Comment 4 Michael Vrhel 2011-12-05 19:26:14 UTC
Issue is that we are not paying attention to the knock out setting when performing copy_alpha in the pdf14 device.  Working on a fix for this now.