Fix for bug 692567.  Knockout support in pdf14_copy_alpha

During a combined stroke and fill we push a knockout group for the stroke.  This was not being handled properly in the pdf14 device's copy_alpha operation.